fixed textarea resize, added scrollbar styles

--- a/src/component/CodeEditor.css
+++ b/src/component/CodeEditor.css
@@ -47,6 +47,7 @@
   font-size: 12px;
   border-radius: 10px;
   caret-color: black;
+  border-radius: 10px;
 }
 
 .code-input {
@@ -66,6 +67,7 @@
   overflow-y: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
+  resize: none;
 }
 
 pre {
@@ -80,6 +82,30 @@ pre {
   overflow-y: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
+}
+
+/* Scroll style */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(197, 197, 197);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(54, 22, 54);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(54, 22, 54);
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 500px) {
